# EvioTool

./: .gitignore  CMakeLists.txt  EvioTool.xcconfig  Makefile  Makefile_depends  Project.xcconfig  Project_Debug.xcconfig  README.md  et_evio_blaster.xcconfig  master.xcconfig  programs.xcconfig
et-14.0-clon/: CMakeLists.txt  Makefile
et-14.0-clon/cmake/: etConfig.cmake
et-14.0-clon/doc/htm/: creating_system.htm  et_manual.htm  introduction.htm  programming_details.htm  remote_et.htm  table_of_contents.htm  using_system.htm
et-14.0-clon/et.s/: et.h  etCommonNetwork.c  etCommonNetwork.h  et_bridge.c  et_common.c  et_data.c  et_init.c  et_jni.c_hide  et_local.c  et_mem.c  et_network.c  et_openconfig.c  et_private.h  et_remote.c  et_remoteclient.c_hide  et_server.c  et_station.c  et_sysconfig.c  et_system.c  org_jlab_coda_et_EtJniAccess.h
et-14.0-clon/main/: et2print.c  et_2_et.c  et_2_et_10_00.c  et_2_et_10_01.c  et_2_et_10_02.c  et_2_et_multi.c  et_killer.c  et_monitor.c  et_start.c  evio2et.c  evio2mem2et.c
et-14.0-clon/main/cinclude/: et2et.c
et-14.0-clon/src/examples/: et_blaster.c  et_blasterSimple.c  et_producer.c  et_producer1.c  et_test.c
et-16.1/: .gitignore  CHANGES  CMakeLists.txt  NOTICE  README  SConstruct  build.xml  coda.py  pom.xml
et-16.1/doc/doxygen/: DoxyfileC
et-16.1/doc/htm/: examples.htm  user_routines.htm
et-16.1/doc/users_guide/: ET_Users_Guide.docx
et-16.1/et-16.1.xcodeproj/: project.pbxproj
et-16.1/java/jars/: README
et-16.1/java/org/jlab/coda/et/: EtAttachment.java  EtConstants.java  EtEvent.java  EtEventImpl.java  EtEventSelectable.java  EtJniAccess.java  EtStation.java  EtStationConfig.java  EtStationSelection.java  EtSystem.java  EtSystemOpen.java  EtSystemOpenConfig.java  EtUtils.java  manifest.mf
et-16.1/scripts/: etmonitor
et-16.1/src/examples/: SConscript  et_blaster.c  et_consumer.c  et_producer.c
et-16.1/src/execsrc/: SConscript  et_2_et.c  et_killer.c  et_monitor.c  et_printIFinfo.c  et_start.c
et-16.1/src/libsrc/: SConscript  et.h  etCommonNetwork.c  etCommonNetwork.h  et_attachment.c  et_bridge.c  et_common.c  et_data.c  et_data.h  et_event.c  et_init.c  et_jni.c  et_local.c  et_mem.c  et_network.c  et_network.h  et_noshare.c  et_openconfig.c  et_private.h  et_readwrite.c  et_remote.c  et_remoteclient.c  et_server.c  et_statconfig.c  et_station.c  et_sysconfig.c  et_system.c
et-16.1/src/test/: SConscript  et_threadTest.c
et-16.1/tar/: tarexclude
evio-4.3.1/: .sconsign.dblite  Build_Quick.sh  CHANGES  CMakeCache.txt  CMakeLists.txt  Makefile  README  SConstruct  build.xml  cmake_install.cmake  coda.py  libevio.xcconfig
evio-4.3.1/.sconf_temp/: conftest_0  conftest_0.c
evio-4.3.1/common/include/: evioBufferChannel.hxx
evio-4.3.1/doc/doxygen/: CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile  cmake_install.cmake
evio-4.3.1/evio-4.3.1.xcodeproj/: project.pbxproj
evio-4.3.1/evio-4.3.1.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
evio-4.3.1/evio-4.3.1.xcodeproj/project.xcworkspace/xcshareddata/: evio-4.3.1.xccheckout
evio-4.3.1/include/: evioChannel.hxx  evioFileChannel.hxx  evioUtilTemplates.hxx
evio-4.3.1/src/examples/: CMakeLists.txt  SConscript
evio-4.3.1/src/execsrc/: CMakeLists.txt  Makefile  SConscript  cmake_install.cmake  evio2xml.cc  evioCat
evio-4.3.1/src/execsrc/.Darwin-x86_64/: evio2xml  evioCat  eviocopy  old.evio2xml  xml2evio
evio-4.3.1/src/libsrc/: CMakeLists.txt  Makefile  cmake_install.cmake
evio-4.3.1/src/libsrc++/: CMakeLists.txt  Makefile  cmake_install.cmake
evio-4.3.1/src/test/: CMakeLists.txt  elliottTest.cc
evio-4.4.6/: CHANGES  CMakeLists.txt  README  SConstruct  build.xml  coda.py  libevio-4.4.6.xcconfig  pom.xml
evio-4.4.6/doc/users_guide/: evio_Users_Guide.doc
evio-4.4.6/evio-4.4.6.xcodeproj/: project.pbxproj
evio-4.4.6/java/org/jlab/coda/jevio/: BaseStructure.java  BlockHeaderV4.java  BlockNode.java  BufferNode.java  ByteDataTransformer.java  CompactEventBuilder.java  CompositeData.java  DataType.java  Demo.java  EventBuilder.java  EventParser.java  EventWriter.java  EvioBank.java  EvioCompactEventWriter.java  EvioCompactReader.java  EvioCompactStructureHandler.java  EvioDictionaryEntry.java  EvioEvent.java  EvioFileTest.java  EvioNode.java  EvioReader.java  EvioSegment.java  EvioTagSegment.java  EvioXMLDictionary.java  IEvioListener.java  IEvioProgressListener.java  IEvioStructure.java  MappedMemoryHandler.java  NameProvider.java  SegmentHeader.java  StructureFinder.java  TagSegmentHeader.java  Utilities.java  manifest.mf
evio-4.4.6/src/examples/: etst10.cc  etst16.cc  etst7.cc
evio-4.4.6/src/execsrc/: SConscript  old.evio2xml.c
evio-4.4.6/src/libsrc/: evio.c  evioswap.c
evio-4.4.6/src/libsrc++/: SConscript  evioBufferChannel.cc  evioDictionary.cc  evioFileChannel.hxx  evioTypedefs.hxx  evioUtil.cc
evio-4.4.6/src/test/: evMultithread.c  evTestHandles.c  evtest.c  evtest2.c  evtestBuf.c  evtestRio.c
evio-5.1/: CHANGES  CMakeLists.txt  SConstruct  build.xml  coda.py  libevio.xcconfig  pom.xml
evio-5.1/cmake/: evioConfig.cmake
evio-5.1/doc/users_guide/: evio_Users_Guide.doc  ~$io_Users_Guide.doc
evio-5.1/evio-5.1.xcodeproj/: project.pbxproj
evio-5.1/evio-5.1.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
evio-5.1/java/org/jlab/coda/jevio/: BankHeader.java  BaseStructure.java  BaseStructureHeader.java  BlockHeaderV2.java  BlockHeaderV4.java  BlockNode.java  BufferNode.java  ByteDataTransformer.java  CompactEventBuilder.java  CompositeData.java  DataType.java  Environment.java  EventParser.java  EventWriter.java  (+18 more)
evio-5.1/src/examples/: SConscript  etst15.cc
evio-5.1/src/execsrc/: README  evio2xml.c  evioconcat.cc  eviocopy.c  eviosplit.cc
evio-5.1/src/libsrc/: SConscript  evio.c  evio.h  eviofmt.c  eviofmtdump.c  eviofmtswap.c  evioswap.c
evio-5.1/src/libsrc++/: evioBufferChannel.cc  evioDictionary.cc  evioFileChannel.cc  evioSocketChannel.cc  evioUtil.cc
evio-5.1/src/test/: evTestFirstEvent.c  evtestAppend.c  evtestBuf2.c  evtestRead.c  evtestSock.c  splitTest.c  stringTest.c
evio-5.1/tar/: tarexclude
(+246 files in other folders)
